# sift-gateway

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN_FINAL.md  LICENSE  MCP Artifact Gateway (Python) Full Implementation  3015bf0c026f80cd9f19f3b71f098cb4.md  README.md  README.old.md  SECURITY.md  assessment_revised.md  docker-compose.yml  meta_ads_top5_base64_table.md  pyproject.toml  task_plan.md  task_plan_evaluation.md  task_plan_resolution_tracker.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/rulesets/: main-protection.json
.github/workflows/: ci.yml  clawhub-sync.yml  docs-contract.yml  publish-pypi.yml  release.yml
benchmarks/: README.md
benchmarks/common/: baseline.py  datasets.py  evaluate.py  llm_client.py  questions.py  sift_runtime.py
benchmarks/tier1/: code_extract.py  code_result.py  datasets.py  evaluate.py  fetch_data.py  harness.py  llm_client.py  mock_upstream.py  questions.py  sift_runtime.py  test_evaluate.py
benchmarks/tier2/: agent_loop.py  harness.py  llm_tool_client.py  metrics.py  system_prompt.py  tool_bridge.py
docs/: README.md  api_contracts.md  architecture.md  cli-agnostic-roadmap.md  cli-output-format.md  config.md  contract-v1-run-nextpage-code.md  cursor_contract.md  deployment.md  errors.md  maintainer_github_guardrails.md  migration-guide.md  observability.md  openclaw.md  packaging-transition.md  performance-benchmarks.md  quickstart.md  recipes.md  release-checklist.md  security-hardening.md  spec_v1_9.md  traversal_contract.md  upstream_registration.md  why.md
docs/benchmarks/: 2026-02-19-local-baseline.json  2026-02-19-local-baseline.md  README.md
docs/openclaw/: README.md  SKILL.md  response-templates.md  troubleshooting.md
docs/openclaw/prompts/: prompt_no_sift.md  prompt_with_sift.md
docs/openclaw/testdata/: employee_roster_v2.json  squad_registry_v3.json
docs/plans/: 2026-02-12-artifact-query-refs-design.md
scripts/: automate_openclaw_prompt_tests.py  benchmark_large_payloads.py  check_docs_consistency.py  compare_sift_vs_plain.py  init-test-db.sql  run_rc_preflight.py  smoke_cli_behavior.py  smoke_meta_ads_prompt_flow.py  validate.py
src/mcp_artifact_gateway/: __init__.py  app.py  constants.py  lifecycle.py  main.py  request_identity.py  sessions.py
src/mcp_artifact_gateway/artifacts/: __init__.py  create.py
src/mcp_artifact_gateway/cache/: __init__.py  reuse.py
src/mcp_artifact_gateway/canon/: __init__.py  compress.py  decimal_json.py  rfc8785.py
src/mcp_artifact_gateway/config/: __init__.py  docker_postgres.py  init.py  mcp_servers.py  settings.py
src/mcp_artifact_gateway/cursor/: __init__.py  hmac.py  payload.py  sample_set_hash.py  secrets.py
src/mcp_artifact_gateway/db/: __init__.py  backend.py  conn.py  dialect.py  migrate.py  protocols.py
src/mcp_artifact_gateway/envelope/: __init__.py  jsonb.py  model.py  normalize.py  oversize.py  responses.py
src/mcp_artifact_gateway/fs/: __init__.py  blob_store.py  resource_store.py
src/mcp_artifact_gateway/jobs/: __init__.py  hard_delete.py  quota.py  reconcile_fs.py  soft_delete.py
src/mcp_artifact_gateway/mapping/: __init__.py  full.py  partial.py  runner.py  worker.py
src/mcp_artifact_gateway/mcp/: __init__.py  mirror.py  server.py  upstream.py
src/mcp_artifact_gateway/obs/: __init__.py  logging.py  metrics.py
src/mcp_artifact_gateway/query/: __init__.py  jsonpath.py  select_paths.py  where_dsl.py  where_hash.py
src/mcp_artifact_gateway/retrieval/: __init__.py  response.py  traversal.py
src/mcp_artifact_gateway/storage/: __init__.py  payload_store.py
src/mcp_artifact_gateway/tools/: __init__.py  artifact_chain_pages.py  artifact_describe.py  artifact_find.py  artifact_get.py  artifact_search.py  artifact_select.py  status.py
src/mcp_artifact_gateway/util/: __init__.py  hashing.py
src/sidepouch_mcp/: __init__.py  app.py  constants.py  lifecycle.py  main.py  request_identity.py  sessions.py
src/sidepouch_mcp/artifacts/: __init__.py  create.py
src/sidepouch_mcp/cache/: __init__.py  reuse.py
src/sidepouch_mcp/canon/: __init__.py  rfc8785.py
src/sidepouch_mcp/config/: __init__.py  docker_postgres.py  init.py  mcp_servers.py  settings.py  sync.py  upstream_secrets.py
src/sidepouch_mcp/cursor/: __init__.py  hmac.py  payload.py  sample_set_hash.py
src/sift_gateway/: __init__.py  app.py  cli_main.py  constants.py  lifecycle.py  main.py  request_identity.py  response_sample.py  schema_compact.py
src/sift_mcp/: __init__.py  app.py  cli_main.py  constants.py  lifecycle.py  main.py  request_identity.py  schema_compact.py  sessions.py
src/sift_mcp/db/: conn.py  (+4 more)
tests/: conftest.py
tests/integration/: conftest.py  test_e2e_pipeline.py  test_http_auth_runtime.py  test_postgres_runtime.py  test_sqlite_e2e_pipeline.py  test_upstream_cli_lifecycle.py
tests/unit/: _helpers.py  test_artifact_blob_handler.py  test_artifact_code_handler.py  test_artifact_code_parse_steps.py  test_artifact_code_pipeline.py  test_artifact_create.py  test_artifact_handle.py  test_artifact_next_page.py  test_artifacts_repo_validation.py  test_auth_modules.py  test_auto_paginate_loop.py  test_auto_pagination.py  test_benchmark_code_extract.py  test_benchmark_code_result.py  test_benchmark_evaluate.py  test_benchmark_fetch_data.py  test_benchmark_harness.py  test_benchmark_llm_client.py  test_benchmark_schema_prompt.py  test_benchmark_sift_runtime.py  test_benchmark_tier2_agent_loop.py  test_benchmark_tier2_harness.py  test_benchmark_tier2_llm_tool_client.py  test_benchmark_tier2_metrics.py  test_benchmark_tier2_system_prompt.py  test_benchmark_tier2_tool_bridge.py  test_blob_store.py  test_cleanup_lifecycle.py  test_cli_main.py  test_codegen_ast_guard.py  test_codegen_extract.py  test_codegen_result.py  test_codegen_runtime.py  test_codegen_validate.py  test_compress.py  test_config_settings.py  test_config_shared.py  test_config_sync.py  test_consolidated_signals.py  test_content_extract.py  (+103 more)
(+397 files in other folders)
