[project]
name = "sift-mcp"
version = "0.1.0"
description = "Keep big MCP responses out of your context window. Query them."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "zmaciel", email = "46382529+zmaciel@users.noreply.github.com" }
]
requires-python = ">=3.11"
keywords = [
    "mcp",
    "model-context-protocol",
    "gateway",
    "artifacts",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    # MCP framework
    "fastmcp>=2.0.0",
    # Streaming JSON parser (partial mapping)
    "ijson>=3.3.0",
    # Deterministic query/runtime deps
    "jmespath>=1.0.1",
    "orjson>=3.10.0",
    "jsonschema>=4.23.0",
    "referencing>=0.35.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    # Compression for canonical bytes
    "zstandard>=0.23.0",
    # Structured logging
    "structlog>=24.0.0",
    # Config & model validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Prometheus metrics
    "prometheus_client>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/lourencomaciel/sift-mcp"
Repository = "https://github.com/lourencomaciel/sift-mcp"
Issues = "https://github.com/lourencomaciel/sift-mcp/issues"
Changelog = "https://github.com/lourencomaciel/sift-mcp/blob/main/CHANGELOG.md"

[project.optional-dependencies]
postgres = [
    "psycopg[binary,pool]>=3.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
sift-mcp = "sift_mcp.main:cli"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 80
src = ["src"]

[tool.ruff.lint]
extend-select = [
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "D",      # pydocstyle
    "FLY",    # flynt (f-string conversion)
    "G",      # flake8-logging-format
    "I",      # isort
    "N",      # pep8-naming
    "PERF",   # perflint
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "RSE",    # flake8-raise
    "RUF",    # ruff-specific
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "TID",    # flake8-tidy-imports
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["sift_mcp"]

[tool.ruff.lint.per-file-ignores]
"src/sift_mcp/main.py" = ["T201"]
"src/sift_mcp/config/init.py" = ["T201"]
"src/sift_mcp/config/upstream_add.py" = ["T201"]
"tests/**/*.py" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "prometheus_client.*"
ignore_missing_imports = true
